--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "keywords": [],
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.15.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "prisma": "^5.15.1"
   }
 }
