--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Dr Hamidou Kassogué",
   "license": "ISC",
   "keywords": [],
-  "description": "",
+  "description": "This is a basic backend for eshop app base on JS technologies",
   "dependencies": {
     "@prisma/client": "^5.15.1",
     "cors": "^2.8.5",
@@ -16,6 +19,7 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
+    "nodemon": "^3.1.4",
     "prisma": "^5.15.1"
   }
 }
