--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "This is a basic backend for eshop app base on JS technologies",
   "dependencies": {
     "@prisma/client": "^5.15.1",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
